--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ allprojects {
 
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.1'
+    testImplementation 'org.assertj:assertj-core:3.24.2'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.10.1'
 }
 
